#10735 closed bug (fixed)
BOptionPopUp::SetEnabled() does not work
Reported by: | ttcoder | Owned by: | waddlesplash |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta1 |
Component: | Kits/Interface Kit | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
BOptionPopUp::SetEnabled() over here
http://cgit.haiku-os.org/haiku/tree/src/kits/interface/OptionPopUp.cpp#n255
is incorrect, it should "transmit" the call to the actuel widget like this:
if(fMenuField) fMenuField->SetEnabled(on);
Change History (4)
comment:1 by , 10 years ago
Milestone: | R1 → R1/alpha5 |
---|---|
Owner: | changed from | to
Status: | new → assigned |
comment:4 by , 10 years ago
Milestone: | R1/alpha5 → R1/beta1 |
---|
Note:
See TracTickets
for help on using tickets.
Anyone have a reason why that change can't be applied?