Make disabling BOptionPopUp actually work

* Patch by ttcoder
* Fixes #10735